--- a/source/index.html
+++ b/source/index.html
@@ -9,10 +9,43 @@
     <link href="css/style.css" rel="stylesheet"/>
   </head>
   <body>
+    <svg style="display:none">
+      <symbol viewBox="0 0 30 16" id="icon-vk"><path d="M17.6,12c-0.3,0-0.9-0.1-1.5-0.5c-0.5-0.3-0.9-0.7-1.3-1.2c-0.3-0.3-0.9-0.9-1.1-0.9c-0.2,0.1-0.4,0.7-0.3,1.2
+        c0,0.1,0,0.6-0.3,0.9c-0.3,0.3-0.8,0.4-0.9,0.4h-1.4c-0.7,0-3.2-0.2-5.4-2.3C2.5,7.1,0.2,2.2,0.1,2C0,1.6-0.1,1.2,0.2,0.9
+        s0.8-0.4,1-0.4h3.1c0.1,0,0.4,0.1,0.7,0.3C5.3,1,5.4,1.3,5.5,1.4c0.7,1.5,1.5,2.8,2.6,4C8.2,5,8.3,4,8.2,3.1c0-0.4-0.1-0.8-0.2-1
+        C7.9,2,7.7,1.9,7.5,1.9L6.9,1.4c0-0.5,0.5-0.9,0.9-1.1C8.3,0.1,9.1,0,10.1,0h0.5c0.9,0,1.2,0.1,1.6,0.1c1.2,0.3,1.2,1.3,1.1,2.5v1.6
+        c0,0.3,0,0.8,0.1,1c0.2-0.1,0.6-0.5,1.5-1.9c0.6-0.9,1-1.9,1.1-2.1c0.1-0.3,0.4-0.7,1.2-0.7h3.4c0.7,0,1.2,0.2,1.3,0.7
+        c0.2,0.5,0.1,1.3-1.7,3.5c-0.3,0.3-0.5,0.6-0.7,0.9c-0.5,0.4-0.9,1-0.9,1.1s0.5,0.5,0.9,0.9c1.1,0.9,1.9,1.7,2.2,2.3
+        c0.4,0.6,0.3,1,0.2,1.3c-0.3,0.7-1.2,0.7-1.4,0.8h-2.8C17.7,12,17.6,12,17.6,12z M13.7,8.3c0.7,0,1.2,0.6,1.8,1.2
+        c0.4,0.4,0.7,0.8,1.1,1c0.5,0.3,1,0.3,1,0.3h2.9c0.1,0,0.3-0.1,0.4-0.1c0,0,0-0.1-0.1-0.1c-0.3-0.5-1-1.3-2-2.1
+        c-0.9-0.7-1.3-1.1-1.4-1.7c0-0.6,0.4-1.1,1.2-2.1c0.2-0.2,0.4-0.5,0.7-0.8c1.1-1.4,1.4-2,1.5-2.3h-3.9c0,0.4-0.5,1.5-1.1,2.4
+        c-1.4,2.1-2,2.4-2.5,2.4c-0.1,0-0.3,0-0.4-0.1c-0.7-0.4-0.7-1.4-0.7-2.1V3.9V2.6c0.1-1.3,0-1.3-0.3-1.4c-0.3-0.1-0.5-0.1-1.4-0.1H10
+        c-0.5,0-1,0-1.4,0.1l0.2,0.2c0.4,0.5,0.4,1.5,0.4,1.7c0.1,1.3,0,2.9-0.7,3.3c-0.1,0-0.2,0.1-0.4,0.1C7.5,6.5,6.8,5.8,5.6,4
+        C5,2.9,4.5,1.8,4.5,1.8s0-0.1-0.1-0.1S4.2,1.6,4.2,1.6H1.3H1.2c0.4,0.9,2.5,5,4.8,7.2c2,1.9,4.3,2,4.7,2h1.4c0,0,0.2,0,0.2-0.1v-0.1
+        c0-0.2,0-2,1.2-2.3C13.5,8.3,13.7,8.3,13.7,8.3z" fill="#666666"/></symbol>
+        <symbol viewBox="0 0 23 23" id="icon-ins" >
+          <g><style type="text/css">
+            .st0{fill:#666666;}
+          </style>
+          <path class="st0" d="M11.8,1C13.6,1,15,2.4,15,4.2v7.7c0,1.7-1.4,3.1-3.1,3.1H4.2C2.4,15,1,13.6,1,11.8V4.2C1,2.4,2.4,1,4.2,1H11.8
+             M11.8,0H4.2C1.9,0,0,1.9,0,4.2v7.7C0,14.1,1.9,16,4.2,16h7.7c2.3,0,4.2-1.9,4.2-4.2V4.2C16,1.9,14.1,0,11.8,0z"/>
+          <path class="st0" d="M8,4.9c1.7,0,3.1,1.4,3.1,3.1S9.7,11.1,8,11.1S4.9,9.7,4.9,8S6.3,4.9,8,4.9 M8,3.9C5.7,3.9,3.9,5.7,3.9,8
+            s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S10.3,3.9,8,3.9z"/>
+          <circle class="st0" cx="12.3" cy="3.7" r="0.9"/>
+        </g>
+        </symbol>
+        <symbol viewBox="0 0 14 18" id="icon-fb"><path d="M7.1,19H2v-8.8H0V5.8h1.9C1.8,3.8,2.1,2.4,3,1.4C3.8,0.5,5,0.1,6.5,0H10v4.2H7.2C7.1,4.4,7,5,7,5.8h3v4.4H7.1V19z M3.1,18
+          h2.8V9.1h2.9V6.8H5.9V6.3c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6H1.1v2.3h2V18
+          z" fill="#666666"/></symbol>
+    </svg>
     <header class="page-header nav--opened">
       <div class="page-header__wrapper nav--nojs">
         <div class="page-header__nav nav">
-          <div class="nav__logo"></div>
+          <picture>
+            <source media="(min-width: 1440px)" srcset="../img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="../img/logo-tablet.svg">
+            <img class="nav__logo" src="../img/logo-mobile.svg" width="190" height="40" alt="Cat Energy">
+          </picture>
           <button type="button" class="nav__button">Меню</button>
         </div>
         <ul class="page-header__list list-menu">
@@ -31,7 +64,11 @@
            <p class="cover__text">Занялся собой? Займись котом!</p>
            <a class="cover__link" href="form.html">Подобрать программу</a>
           </div>
-        <div class="cover__food"></div>
+          <picture>
+            <source media="(min-width: 1440px)" srcset="../img/index-can-desktop@1x.png">
+            <source media="(min-width: 768px)" srcset="../img/index-can-tablet@1x.jpg">
+            <img class="cover__food" src="../img/index-can-mobile@1x.png" width="280" height="275" alt="Образец корма Cat Energy">
+          </picture>
       </div>
       </section>
       <section class="program">
@@ -84,12 +121,26 @@
           </div>
         <div class="example__slider slider">
           <div class="slider__befor">
-            <div class="slider__img img__befor"></div>
-            <button type="button">Далее</button>
-            <p>До</p>
+            <picture>
+              <source media="(min-width: 1440px)" srcset="../img/before-desktop@1x.png">
+              <source media="(min-width: 768px)" srcset="../img/before-tablet@1x.png">
+              <img class="slider__img" src="../img/before-mobile@1x.png" width="320" height="240" alt="Изоражение кота Бориса До">
+            </picture>
+            <div class="slider__text">
+              <p>Было</p>
+              <ul class="slider__list">
+              <li><label class="slider__button"><input type="radio" name="slider-radio" value="befor" class="visually-hidden" checked><span class="slider-radio"></span></label></li>
+                <li><label class="slider__button"><input type="radio" name="slider-radio" value="after" class="visually-hidden"><span class="slider-radio"></span></label></li>
+                </ul>
+              <p>Стало</p>
+            </div>
           </div>
           <div class="slider__after">
-            <div class="slider__img img__after"></div>
+            <picture>
+              <source media="(min-width: 1440px)" srcset="../img/after-desktop@1x.png">
+              <source media="(min-width: 768px)" srcset="../img/after-tablet@1x.png">
+              <img class="slider__img" src="../img/after-mobile@1x.png" width="320" height="240" alt="Изоражение кота Бориса До">
+            </picture>
             <button type="button">Назад</button>
             <p>После</p>
           </div>
@@ -98,10 +149,17 @@
       </section>
       <section class="map">
         <div class="map__wrapper">
+        <div class="map__block">
            <h2>Приглашаем<br>к сотрудничеству дилеров!</h2>
            <p class="map__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
-        <div class="map__img"></div>
+        <picture>
+          <source media="(min-width: 1440px)" srcset="../img/bg-map-desktop@1x.png">
+          <source media="(min-width: 768px)" srcset="../img/bg-map-tablet@1x.png">
+          <img class="map__img" src="../img/bg-map-mobile@1x.png" width="320" height="362" alt="На адресс: Санкт-Петербург ул. Большая Конюшенная, д. 19/8">
+        </picture>
+        <img class="map__pin" src="../img/map-pin.png" width="53" height="45" alt="Маркер на карте">
+        </div>
       </section>
     </main>
     <foooter class="page-footer">
@@ -109,15 +167,22 @@
         <ul class="page-footer__list">
         <li><a href="index.html" class="page-footer__logo-link"><img class="page-footer__logo" src="../img/logo-footer.svg" alt="Логотип компании" width="128" height="24"/></a></li>
         <li><ul class="page-footer__social list-social">
-          <li><a href="#" class="list-social__vk"></a></li>
-          <li><a href="#" class="list-social__ins"></a></li>
-          <li><a href="#" class="list-social__fb"></a></li>
+          <li><a href="#"><svg class="list-social__vk" width="30" height="16"><use xlink:href="#icon-vk"></use></svg></a></li>
+          <li><a href="#"><svg class="list-social_ins" width="23" height="23"><use xlink:href="#icon-ins"></use></svg></a></li>
+          <li><a href="#"><svg class="list-social__fb" width="14" height="18"><use xlink:href="#icon-fb"></use></svg></a></li>
           </ul>
         </li>
         <li><div class="page-footer__copyright copyright">
+          <a class="copyright-link" href="">
           <p class="copyright_text">HTML Academy</p>
-          <svg class="copyright__logo" width="40" height="40" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path fill="#2E368F" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
-        </div>
+          <svg class="copyright__logo" width="40" height="40" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60">
+            <path d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17
+            36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7
+            11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8
+            3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2
+            1.8v13.6z" fill="#666666"/>
+          </svg>
+        </div></a>
         </li>
         </ul>
       </div>
